[project]
name = "stride-gpt"
version = "0.18.0"
description = "AI-powered threat modeling using the STRIDE methodology"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{name = "Matt Adams", email = "mrwadams@gmail.com"}]
keywords = ["threat-modeling", "stride", "security", "owasp", "ai-security", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "httpx>=0.27",
    "litellm>=1.40",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "typer>=0.15",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "defusedxml>=0.7.1",
]

[project.urls]
Homepage = "https://github.com/mrwadams/stride-gpt"
Issues = "https://github.com/mrwadams/stride-gpt/issues"
Repository = "https://github.com/mrwadams/stride-gpt"

[project.scripts]
stride-gpt = "stride_gpt.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4",
    "ruff==0.15.21",
]
# Streamlit web-app deps (apps/web). Kept out of [project.dependencies] so the
# published CLI wheel stays lean; a dependency-group is local/deploy-only and is
# never shipped in the wheel. Streamlit Community Cloud installs these because it
# resolves via uv.lock (uv.lock outranks requirements.txt in SCC's precedence)
# and default-groups (below) makes `uv sync` install them. Mirrors the runtime
# entries in apps/web/requirements.txt (deps already in [project.dependencies] —
# httpx, litellm, pydantic, python-dotenv, defusedxml — are not repeated).
web = [
    "streamlit>=1.58.0",
    "openai",
    "anthropic",
    "groq",
    "pyGithub",
    "tiktoken",
    "requests>=2.34.2",
]

[tool.uv]
# `uv sync` (used by SCC, CI, and release) installs these groups by default, so
# the web app has its deps in every environment without extra flags.
default-groups = ["dev", "web"]
# Security floors for transitive deps not directly imported (mirrors the Snyk
# pins in requirements.txt). Applied at lock time and baked into uv.lock.
# (No tornado floor: Streamlit >=1.59 runs on Starlette/Uvicorn, not Tornado.)
constraint-dependencies = [
    "urllib3>=2.7.0",
    "anyio>=4.14.1",
    "zipp>=4.1.0",
    "h11>=0.16.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["stride_gpt*"]

[tool.setuptools.package-data]
"stride_gpt.core.prompts.threat_model" = ["*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "apps/web"]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "C4",    # flake8-comprehensions (C901 mccabe complexity intentionally excluded)
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
    "N",     # pep8-naming
    "SIM",   # flake8-simplify
    "RET",   # flake8-return
    "PTH",   # flake8-use-pathlib
    "PERF",  # perflint
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",  # Line too long (handled by black)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py
"utils.py" = ["F401"]  # Backward-compatible re-exports
# load_dotenv() must run before importing modules that read env at import time
"stride_gpt/cli.py" = ["E402"]
# Streamlit sets page config / sys.path before its imports
"apps/web/main.py" = ["E402"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true
